crates/specforge-parser/tests/snapshots/snapshot_tests__event.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: "serde_json::json!({\n    \"entity_count\": file.entities.len(), \"entities\": entities, \"error_count\":\n    file.errors.len(), \"errors\": errors, \"import_count\": file.imports.len(),\n})"
---
{
  "entities": [
    "event user_created Some(\"User Created\")"
  ],
  "entity_count": 1,
  "error_count": 0,
  "errors": [],
  "import_count": 0
}
