crates/specforge-parser/tests/snapshots/snapshot_tests__multi_error_diagnostics.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: result.errors
---
[
  {
    "message": "syntax error: unexpected '??? {\n    this is broken\n}\n\nbehavior'",
    "span": {
      "file": "test.spec",
      "start_line": 6,
      "start_col": 10,
      "end_line": 10,
      "end_col": 9
    },
    "expected": null,
    "found": "??? {\n    this is broken\n}\n\nbehavior"
  }
]
