crates/specforge-parser/tests/snapshots/snapshot_tests__real_world_imports.snap
---
source: crates/specforge-parser/tests/snapshot_tests.rs
expression: result.imports
---
[
  {
    "path": "invariants/core",
    "selected_ids": null,
    "span": {
      "file": "behaviors/parsing.spec",
      "start_line": 2,
      "start_col": 1,
      "end_line": 2,
      "end_col": 20
    }
  },
  {
    "path": "types/core",
    "selected_ids": null,
    "span": {
      "file": "behaviors/parsing.spec",
      "start_line": 3,
      "start_col": 1,
      "end_line": 3,
      "end_col": 15
    }
  }
]
